# hackathon2023

./: .gitignore  Anchor.toml  README.md  package.json
app/: ABI_SC_mint_coin.txt  helloworm.json  helloworm.ts  helper.ts  next.config.js  package.json  window.d.ts
app/components/: BSCWallet.tsx  SOLWallet.tsx  Wallet.tsx
app/config/: config.ts
app/context/: WalletContext.tsx
app/pages/: .env  _app.tsx  index.tsx
app/pages/api/lucky/: create.ts
app/pages/api/shyft/: view.ts  watch.ts
app/service/: api.types.ts  api.wallet.ts  app.api.ts
app/styles/: globals.css
app/ultis/: formater.ts
ethereum/: BSCCoin.sol  BytesLib.sol  Messages.sol  Receiver.sol  WormholeReceiver.sol
helloworm/: Anchor.toml  package-lock.json  package.json  tsconfig.json
helloworm/programs/helloworm/: Cargo.toml
helloworm/programs/helloworm/src/: lib.rs
helloworm/tests/: helloworm.ts  hepler.ts  needed.ts
programs/hackathon2023/: Cargo.toml
programs/hackathon2023/src/: lib.rs
tests/: hackathon2023.ts
