[package]
name = "helloworm"
version = "0.1.0"
description = "01 - Hello World"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "helloworm"

[features]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.27.0", features = ["init-if-needed"]}
wormhole-anchor-sdk = { path = "../../../wormhole-anchor-sdk", features=["solana-devnet"]}